# LinuxSysInfo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sysinfowidget.cpp  sysinfowidget.h
